--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,20 @@
 /* Герой */
-.hero {
-  background-color: var(--hero-color);
+.hero-section {
   padding-top: 200px;
   padding-bottom: 200px;
   text-align: center;
+  max-width: 1600px;
+  margin: 0 auto;
+
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/hero-background.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .hero-title {
@@ -50,6 +61,18 @@
   margin-right: 0;
 
   /* outline: 1px solid blueviolet; */
+}
+
+.advantages-icon-container {
+  display: inline-flex;
+  width: 270px;
+  height: 120px;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+  border-radius: 4px;
+
+  background-color: var(--background-icon);
 }
 
 .advantage-title {
@@ -134,6 +157,8 @@
 }
 
 .position {
+  margin-bottom: 16px;
+
   font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
@@ -141,4 +166,78 @@
   letter-spacing: 0.03em;
 
   color: var(--secondary-text-color);
+}
+
+.team-icons-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.team-icons-item {
+  margin-right: 10px;
+}
+
+.team-icons-item:last-child {
+  margin-right: 0;
+}
+
+.team-social-link {
+  display: inline-flex;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+
+  color: var(--color-icon);
+}
+
+.team-social-link:hover,
+.team-social-link:focus {
+  background-color: var(--hover-color);
+  color: var(--hover-icon);
+}
+
+.team-social-icon {
+  fill: currentColor;
+}
+
+/* Постоянные клиенты */
+.regular-customers-section {
+  padding: 94px 0;
+}
+
+.customers-list {
+  display: flex;
+}
+
+.customers-item {
+  margin-right: 30px;
+}
+
+.customers-item:last-child {
+  margin-right: 0;
+}
+
+.customers-link {
+  display: inline-flex;
+  width: 170px;
+  height: 90px;
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+  justify-content: center;
+  align-items: center;
+
+  color: var(--color-icon);
+}
+
+.customers-link:hover,
+.customers-link:focus {
+  color: var(--hover-color);
+  border-color: var(--hover-color);
+}
+
+.customers-icon {
+  fill: currentColor;
 }
