--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -20,6 +20,9 @@
   margin-right: 0;
 }
 
+.filter-item:hover {
+}
+
 .filter-button {
   padding: 6px 22px;
   border-radius: 4px;
@@ -34,8 +37,9 @@
 }
 
 .filter-button:hover,
-.filter-button:focus,
-.filter-button:visited {
+.filter-button:focus {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
   background-color: var(--background-button-hover);
   color: var(--filter-button-hover-color);
 }
@@ -57,6 +61,12 @@
   margin-bottom: var(--card-set-gap);
 
   /* outline: 1px solid blueviolet; */
+}
+
+.card-item:hover,
+.card-item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .portfolio-card-description {
